# veto-alt-manager

./: .gitignore  LICENSE  README.md
progetto_cpp/: CMakeLists.txt  CMakeLists_shared.txt  CMakeLists_static_bak.txt  build.bat  build.sh  build.sh.bat  build_qt.bat  installer.nsi  resources.rc
progetto_cpp/src/: AltManagerBridge.cpp  AltManagerBridge.h  dll.cpp  injector.cpp  main_qt.cpp  test_qt.cpp
